# oseta

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cron  OSETA CDC.md  PRODUCT.md  alembic.ini  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  render.yaml  results.md
alembic/: env.py
alembic/versions/: 514131ceac41_initial_schema.py
context/: graph.md
flows/: briefing_job.py  correlation_job.py  daily_pipeline.py  runner.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: generate-graph.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: correlations.ts  predictions.ts
frontend/src/components/: InsightCard.tsx  LeadGraph.tsx  MacroOverlay.tsx  PipelinePanel.tsx  SectionNav.tsx  SignalFeed.tsx  SignalOfTheDay.tsx  TrackRecord.tsx
frontend/src/components/heatmap/: CorrelationHeatmap.tsx  HeatmapControls.tsx
frontend/src/hooks/: useCorrelationMatrix.ts  usePredictions.ts
frontend/src/types/: correlation.ts  predictions.ts
models/: db.py  enums.py  schemas.py
monitoring/: prometheus.yml
prompts/: analyze.py  briefing.py  predict.py  score_impact.py  signals.py
routes/: articles.py  correlations.py  health.py  predictions.py  sectors.py
scripts/: audit_correlations.py  init-db.sh  run_pipeline.py  seed_sectors.py  smoke_test.py  start_api.sh
services/: analyzer.py  cache.py  collector.py  collector_sources.py  correlation_store.py  correlator.py  data_fetcher.py  database.py  exceptions.py  pipeline.py  predictor.py  publisher.py  scorer.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_articles.py  test_predictions.py  test_run_pipeline.py  test_scorer.py  test_sectors.py
