[tool.poetry]
name = "oseta"
version = "0.1.0"
description = "Observatory for Strategic Emerging Technologies & Analytics"
authors = ["OSETA Team"]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

# Validation & settings
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"

# LLM
litellm = "^1.55.0"
instructor = "^1.7.0"

# Orchestration
prefect = "^2.20.0"

# Cache
redis = {extras = ["asyncio"], version = "^5.2.0"}

# HTTP client
httpx = "^0.28.0"
tenacity = "^9.0.0"

# Data processing
pandas = "^2.2.0"
numpy = "^2.0.0"
scipy = "^1.14.0"

# Scraping / parsing
readability-lxml = "^0.8.1"
feedparser = "^6.0.11"
fredapi = "^0.5.0"

# Monitoring & logging
loguru = "^0.7.0"
prometheus-fastapi-instrumentator = "^7.0.0"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Utils
python-multipart = "^0.0.17"
python-dotenv = "^1.0.0"
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"
freezegun = "^1.5.0"
mypy = "^1.13.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
